@@ -1,39 +1,0 @@
-<?php
-/**
- * SegmentPlugin for phplist
- * 
- * This file is a part of SegmentPlugin.
- *
- * SegmentPlugin is free software: you can redistribute it and/or modify
- * it under the terms of the GNU General Public License as published by
- * the Free Software Foundation, either version 3 of the License, or
- * (at your option) any later version.
- * CriteriaPlugin is distributed in the hope that it will be useful,
- * but WITHOUT ANY WARRANTY; without even the implied warranty of
- * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
- * GNU General Public License for more details.
- * 
- * @category  phplist
- * @package   SegmentPlugin
- * @author    Duncan Cameron
- * @copyright 2014 Duncan Cameron
- * @license   http://www.gnu.org/licenses/gpl.html GNU General Public License, Version 3
- */
-
-/**
- * 
- * 
- * @category  phplist
- * @package   SegmentPlugin
- */
-class SegmentPlugin_AttributeConditionBase
-{
-    protected $attribute;
-    public $dao;
-
-    public function __construct($attribute)
-    {
-        $this->attribute = $attribute;
-    }
-}
-
