@@ -1,3 +1,6 @@
+version 2015-02-13
+      Add "is between" operator for date fields
+
 version 2015-01-06
       Remove limit of 15 attributes
 
